[CLD-370] fix wizard not usuable on mobile

--- a/src/styles/pages/checklist-detail.scss
+++ b/src/styles/pages/checklist-detail.scss
@@ -1,3 +1,7 @@
+.detailContent {
+  width: 100%;
+}
+
 .topNavbar {
   text-align: right;
 }
